# order_service/dto/request_dto.go
@@ -1,1 +1,5 @@
 package dto
+
+type CreateOrderRequestDTO struct {
+	OrderDate string `json:"order_date" binding:"required"`
+}
